--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
             dist/*.deb
             dist/*.rpm
             dist/*.pacman
-            dist/latest.yml
+            dist/latest*.yml
 
   build-windows:
     runs-on: windows-latest
