--- a/.github/ISSUE_TEMPLATE/support_request.yml
+++ b/.github/ISSUE_TEMPLATE/support_request.yml
@@ -1,8 +1,22 @@
 name: Support Request
 description: Request help or support
-title: "[SUPPORT] "
+title: "[SUPPORT] <ADD YOUR TITLE HERE>"
 labels: ["support"]
 body:
+  - type: dropdown
+    id: acknowledge
+    attributes: 
+      label: Checklist
+      options:
+        - label: I have read the README.md before asking Support Request.
+          required: true
+        - label: I have read the TROUBLESHOOTING.md before asking Support Request.
+          required: true
+        - label: I have added title before submitting this Support Request.
+          required: true
+        - label: I acknowledge that my Support Request will not be responded as quick as in Discord Open-A-Ticket, I prefer this way.
+          required: true
+
   - type: markdown
     attributes:
       value: |
@@ -24,7 +38,7 @@ body:
     attributes:
       label: Context
       description: Provide any relevant context or background information.
-      placeholder: "I've tried..., but got..."
+      placeholder: "I've tried these steps, but got..."
     validations:
       required: true
 
@@ -37,12 +51,17 @@ body:
     validations:
       required: true
 
-  - type: input
+  - type: dropdown
     id: version
     attributes:
       label: Version
       description: What version are you using?
-      placeholder: "e.g. v2.0.11 stable/pre-release"
+      options:
+        - v2.1.2
+        - v2.1.1
+        - v2.1.0
+        - v2.0.11
+        - v2.0.2
     validations:
       required: true
 
@@ -52,13 +71,12 @@ body:
       label: Platform
       description: What platform are you using?
       options:
-        - Windows 10
-        - Windows 11
-        - macOS (Apple Silicon)
-        - macOS (Intel)
-        - Linux Ubuntu/Debian-based
-        - Linux Fedora/RHEL-based
-        - Linux Arch-based
+        - Windows 11 x64
+        - Windows 10 x64
+        - macOS ARM64 (Apple Silicon)
+        - Linux x64 Ubuntu/Debian-based
+        - Linux x64 Fedora/RHEL-based
+        - Linux x64 Arch-based
     validations:
       required: true
 
