--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Build Linux Packages
         run: |
-          npx electron-builder --linux AppImage deb rpm --x64 --arm64 --publish never
+          npx electron-builder --linux AppImage deb rpm --publish never
       - uses: actions/upload-artifact@v4
         with:
           name: linux-builds
