--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,7 @@ jobs:
           sudo -u builder bash << 'EOF'
           set -e
           makepkg --printsrcinfo > .SRCINFO
-          makepkg -sS --noconfirm
+          makepkg -s --noconfirm
           EOF
 
       - name: Fix permissions for upload
