--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "electron-updater": "^6.7.3",
     "fs-extra": "^11.3.3",
     "tar": "^7.5.7",
-    "uuid": "^9.0.1",
-    "encoding": "^0.1.13"
+    "uuid": "^9.0.1"
   },
   "build": {
     "appId": "com.hytalef2p.launcher",
