--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Create a report to help us improve
-title: "[BUG] "
+title: "[BUG] <Insert Bug Title Here>"
 labels: ["bug"]
 body:
   - type: markdown
@@ -59,7 +59,9 @@ body:
     id: hardwarespec
     attributes:
       label: Hardware Specification
-      description: Tell us your CPU, iGPU, dGPU, VRAM, and RAM information.
+      description: |
+        Tell us your CPU, iGPU, dGPU, VRAM, and RAM information. 
+        (Use N/A if you think this is not correlated with the bug)
       placeholder: "CPU: Intel i9-14900K 6.0 GHz | GPU: NVIDIA RTX 4090 24 GB VRAM | RAM: 32 GB"
     validations:
       required: true
@@ -72,9 +74,9 @@ body:
       options:
         - Windows 11/10
         - macOS (Apple Silicon, M1/M2/M3)
-        - Linux Ubuntu/Debian-based (Linux Mint, Pop!_OS, etc.)
-        - Linux Fedora/RHEL-based (Fedora, CentOS, etc.)
-        - Linux Arch-based (Steamdeck, CachyOS, etc.)
+        - Linux Ubuntu/Debian-based (Linux Mint, Pop!_OS, Zorin OS, etc.)
+        - Linux Fedora/RHEL-based (Fedora, Bazzite, CentOS, etc.)
+        - Linux Arch-based (Steamdeck, CachyOS, ArchLinux, etc.)
     validations:
       required: true
 
