feat: workaround proxy for process "in development"

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-HF2P_SECRET_KEY=YOUR_KEY_HERE
+# Proxy Configuration
+# These variables are required for proxy-based requests
+# If not set, the application will fall back to direct connections in development mode
+
+# The URL of your proxy server (e.g., http://localhost:3000 or https://proxy.example.com)
 HF2P_PROXY_URL=YOUR_PROXY
+
+# Secret key for JWT token generation used in proxy authentication
+HF2P_SECRET_KEY=YOUR_KEY_HERE
+
+# Optional: Disable direct connection fallback (default: enabled)
+# Set to 'false' to always use proxy, or leave unset to enable fallback
+# HF2P_USE_FALLBACK=true
+
+# Development Mode
+# The application automatically detects development mode when NODE_ENV is not 'production'
+# In development mode, missing proxy configuration will show helpful warnings instead of errors
+NODE_ENV=development
